--- a/.github/workflows/hello-actions.yml
+++ b/.github/workflows/hello-actions.yml
@@ -6,3 +6,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2 #download the action actions/checkout@v2
       - run: echo "This is our first Github Workflow <3"
+      - run: echo "Second echo, just messin' arround"
