--- a/.github/workflows/pyling.yml
+++ b/.github/workflows/pyling.yml
@@ -1,9 +1,10 @@
-name: pylint magic
-on: [push] #we use on on what events we trigger it
+name: "Deployment of python app"
+on: [push]
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - uses: "python –m pip install –upgrade pip" ; "pip install pylint"
+      -run: echo "this ${{ github.event_name }}"
+        #     - uses: actions/checkout@v2
+        #     - uses: actions/setup-python@v2
+        #     - uses: "python –m pip install –upgrade pip" ; "pip install pylint"
