--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -1,11 +1,13 @@
-name: Deployment-of-python-app
+name: Telerik-Github-Actions-Practice
+
 on: [push]
 jobs:
-  install-dep:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - run: echo "this has been triggered ${{ github.event_name }} event"
-    - run: echo "This job is running on ${{ runner.os }} server hosted on github!"
+    - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+    - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+    - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
     - name: Check out repository code
       uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -15,11 +17,18 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pylint
         pip install pycodestyle
+    - name: Lint with pylint
+      run: |
+        python lint_test.py
     - name: Style with pycodestyle
       run: |
         pycodestyle *.py
-    - name: Add unit testing
+    - name: Unit testing
       run: |
-        python3-m doctest factorial.py
-    - run: echo "This job's status is ${{ job.status }}."
+        python3 -m doctest factorial.py
+    - name: Build container
+      run: echo "Building container iamge"
+    - name: Deploy
+      run: echo "Deploying to cluster"
