--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -5,9 +5,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-    - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-    - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+    - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
+    - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+    - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
     - name: Check out repository code
       uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -28,7 +28,28 @@ jobs:
     - name: Unit testing
       run: |
         python3 -m doctest factorial.py
-    - name: Build container
-      run: echo "Building container iamge"
-    - name: Deploy
-      run: echo "Deploying to cluster"
+  deploy:
+    steps:
+      - name: SSH Server Deploy
+    # You may pin to the exact commit or the version.
+    # uses: kostya-ten/ssh-server-deploy@e0deb814bc458a68b61f6597a865d096e33eb586
+    uses: kostya-ten/ssh-server-deploy@v4
+    with:
+      # Host
+      host: ssh.nedko.info
+      # Port
+      port: # optional, default is 22
+      # Username
+      username: $ {{ SSH_USER }}
+      # Password
+      password: $ {{ SSH_PASSWORD }}
+      # Private key
+      private_key: # optional
+      # Before script
+      before_script: # optional
+      # After script
+      after_script: # optional
+      # After script
+      scp_source: # optional
+      # After script
+      scp_target: # optional, default is ~
