--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -30,5 +30,5 @@ jobs:
         python3 -m doctest factorial.py
         steps:
     - name: SSH Server Deploy
-      run: echo ${{ SSH_USER }}
-      # run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ SSH_USER }}@${{ SSH_HOST }}:/home/gha/"
+      # run: echo ${{ SSH_USER }}
+      run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/"
