--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -29,6 +29,11 @@ jobs:
     #   run: |
     #     python3 -m doctest factorial.py
     #     steps:
-    - name: SSH Server Deploy
-      # run: echo ${{ SSH_USER }}
-      run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/"
+    - name: Copy folder content recursively to remote
+      uses: garygrossgarten/github-action-scp@release
+      with:
+        local: factorial.py
+        remote: /home/gha/
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USER }}
+        password: ${{ secrets.PASSWORD }}
