--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -34,7 +34,8 @@ jobs:
       uses: garygrossgarten/github-action-scp@release
       with:
         local: .
-        remote: .
-        host: ${{ secrets.HOST }}
+        remote: /home/gha
+        host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
-        password: ${{ secrets.PASSWORD }}
+        password: ${{ secrets.SSH_PASSWORD }}
+        privateKey: ${{ secrets.SSH_PRIVATE_KEY}}
