--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -29,13 +29,8 @@ jobs:
     #   run: |
     #     python3 -m doctest factorial.py
     #     steps:
-
-    - name: Copy folder content recursively to remote
-      uses: garygrossgarten/github-action-scp@release
-      with:
-        local: .
-        remote: /home/gha
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USER }}
-        password: ${{ secrets.SSH_PASSWORD }}
-        privateKey: ${{ secrets.SSH_PRIVATE_KEY}}
+    - name: Adding Known hosts
+      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+    - name: SSH Server Deploy
+      # run: echo ${{ SSH_USER }}
+      run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/"
