--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -30,7 +30,5 @@ jobs:
         python3 -m doctest factorial.py
         steps:
     - name: Adding Known hosts
-      run: ssh-keyscan -H ${{ secrets.SSH_PRIVATE_KEY }} >> ~/.ssh/known_hosts
-    - name: SSH Server Deploy
-      # run: echo ${{ SSH_USER }}
-      run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions/"
+      run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions.`date +"%H-%M-%S-%d-%m-%Y"`
+
