--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -30,5 +30,5 @@ jobs:
         python3 -m doctest factorial.py
         steps:
     - name: Adding Known hosts
-      run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions.`date +"%H-%M-%S-%d-%m-%Y"`
+      run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions`date +"-%H-%M-%S-%d-%m-%Y"`
 
