--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -30,5 +30,5 @@ jobs:
         python3 -m doctest factorial.py
         steps:
     - name: Adding Known hosts
-      run: "rsync -azP TheFile.log1.17-00-47-01-11-2021 gha@ssh.nedko.info:/home/gha/github-actions3/"
+      run: "rsync -azP . gha@ssh.nedko.info:/home/gha/github-actions3/"
       # run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions-$(date +\-%d\-%m\-%y\-%H\-%M\-%S)"
