--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -30,7 +30,14 @@ jobs:
     #     python3 -m doctest factorial.py
     #     steps:
     - name: Adding Known hosts
-      run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions-$(date)"
+      run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions/"
       # TODO: Create unique directory on upload (in HH:MM:SS:DD:MM:YYYY format)
       # TODO: Migrate to rsync
-    
+    - name: notify on slack on every event
+      uses: voxmedia/github-action-slack-notify-build@v1
+      with:
+        channel: app-alerts
+        status: STARTED
+        color: good
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SSH_SLACK_WEBHOOK }}
