--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -36,8 +36,11 @@ jobs:
     - name: notify on slack on every event
       uses: voxmedia/github-action-slack-notify-build@v1
       with:
-        channel: app-alerts
+        channel: telerik-upskill-devops
         status: STARTED
         color: good
       env:
         SLACK_BOT_TOKEN: ${{ secrets.SSH_SLACK_WEBHOOK }}
+        with:
+        status: ${{ job.status }}
+
