--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -30,7 +30,7 @@ jobs:
     #     python3 -m doctest factorial.py
     #     steps:
     - name: CD part of the task - copy all files to destination port via ssh
-      run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions/"
+      # run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions/"
       # TODO: Create unique directory on upload (in HH:MM:SS:DD:MM:YYYY format)
       # TODO: Migrate to rsync
 
@@ -47,4 +47,4 @@ jobs:
         SLACK_WEBHOOK: ${{ secrets.SSH_SLACK_WEBHOOK }}
         SLACK_CHANNEL: telerik-upskill-devops
         SLACK_USERNAME: shitBot
-        
+
