--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -29,18 +29,13 @@ jobs:
     #   run: |
     #     python3 -m doctest factorial.py
     #     steps:
-    # - name: CD part of the task - copy all files to destination port via ssh
-      # run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions/"
+    
+    - name: CD part of the task - copy all files to destination port via ssh
+      run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions/"
       # TODO: Create unique directory on upload (in HH:MM:SS:DD:MM:YYYY format)
       # TODO: Migrate to rsync
 
-# TODO - use hashi vault for secret management
-    # - name: Slack Notification
-    #   uses: rtCamp/action-slack-notify@v2
-    #   env:
-    #     VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
-    #     VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
-
+    # TODO - use hashi vault for secret management
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@v2
       env:
