--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -40,13 +40,11 @@ jobs:
 
 
     - name: Archive production artifacts
-      uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v2
       with:
-        name: All py files
-        path: |
-          actions
-    - name: Archive code coverage results
-      uses: actions/upload-artifact@v2
+        name: my-shitty-artifact
+        path: .
+
 
     # TODO - use hashi vault for secret management
     - name: Slack Notification
