--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -57,7 +57,6 @@ jobs:
 
     - name: Snyk
     - uses: actions/checkout@master
-    - name: Run Snyk to check for vulnerabilities
-      uses: snyk/actions/node@master
+    - uses: snyk/actions/node@master
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
