--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -55,8 +55,15 @@ jobs:
         SLACK_CHANNEL: telerik-upskill-devops
         SLACK_USERNAME: shitBot
 
-    - name: Snyk
-    - uses: actions/checkout@master
-    - uses: snyk/actions/node@master
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  security:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: snyk/actions/setup@master
+      - uses: actions/setup-go@v1
+        with:
+          go-version: '1.13'
+      - name: Snyk monitor
+        run: snyk test
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
