--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
     - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
     - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
