Why I exist in such a form?

--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -38,11 +38,7 @@ jobs:
     # TODO - use hashi vault for secret management
 
   notification:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@v2
