--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -48,11 +48,7 @@ jobs:
         SLACK_USERNAME: shitBot
 
   security:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
