--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -19,8 +19,8 @@ jobs:
       uses: crystal-lang/install-crystal@v1
     - name: Run tests
       run: crystal spec
-    - name: Build crystal
-      run: crystal build code/
+    # - name: Build crystal
+    #   run: crystal build code/
 
     # Dani Rankov gave excellent reason why I need to 
     # ditch the scp approach - "Change your thinking from a pet to a herd".
