--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -32,8 +32,8 @@ jobs:
     # - run: mkdir -p path/to/artifact
     # - run: echo hello > path/to/artifact/world.txt
     - run: |
-        crystal build /code/hello-world.cr
-        ./hello-world
+        crystal build code/hello-world.cr
+        ./code/hello-world
 
     - uses: actions/upload-artifact@v2
       with:
