--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -20,12 +20,10 @@ jobs:
     - name: Run tests
       run: crystal spec
     - name: Build crystal
-      uses: actions/checkout@v2
+      # uses: actions/checkout@v2
     - working-directory: ./code
       run: |
         crystal hello-world.cr
-        ls -la
-        pwd
 
     # Dani Rankov gave excellent reason why I need to 
     # ditch the scp approach - "Change your thinking from a pet to a herd".
