--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -24,6 +24,8 @@ jobs:
     # - working-directory: ./code
       run: |
         crystal hello-world.cr
+        pwd
+        ls -lah
 
     # Dani Rankov gave excellent reason why I need to 
     # ditch the scp approach - "Change your thinking from a pet to a herd".
