--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -5,7 +5,8 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        # os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
@@ -21,8 +22,8 @@ jobs:
     - name: Run tests
       run: crystal spec
 
-    - name: Checkout repo
-      uses: actions/checkout@v2
+    # - name: Checkout repo
+    #   uses: actions/checkout@v2
 
     - name: Run Crystal
       uses: actions/checkout@v2
@@ -58,24 +59,26 @@ jobs:
         path: hello-world
     # TODO - use hashi vault for secret management
 
-  security:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/ruby@master
-        continue-on-error: true
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          command: monitor
 
-  notification:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Slack Notification
-      uses: rtCamp/action-slack-notify@v2
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SSH_SLACK_WEBHOOK }}
-        SLACK_CHANNEL: telerik-upskill-devops
-        SLACK_USERNAME: shitBot
+
+  # security:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@master
+  #     - name: Run Snyk to check for vulnerabilities
+  #       uses: snyk/actions/ruby@master
+  #       continue-on-error: true
+  #       env:
+  #         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  #       with:
+  #         command: monitor
+
+  # notification:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Slack Notification
+  #     uses: rtCamp/action-slack-notify@v2
+  #     env:
+  #       SLACK_WEBHOOK: ${{ secrets.SSH_SLACK_WEBHOOK }}
+  #       SLACK_CHANNEL: telerik-upskill-devops
+  #       SLACK_USERNAME: shitBot
