--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -45,7 +45,7 @@ jobs:
     # So I'm migrating to a GitHub artifact and later on - to jFrog Artifactory
     #   run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions/"
     #   # TODO: Create unique directory on upload (in HH:MM:SS:DD:MM:YYYY format)
-    
+    - name: checkout
     - uses: actions/checkout@v2
     # - run: mkdir -p path/to/artifact
     # - run: echo hello > path/to/artifact/world.txt
