--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -13,8 +13,8 @@ jobs:
     - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
     - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
 
-    # - name: Check out repository code
-    #   uses: actions/checkout@v2
+    - name: Check out repository code
+      uses: actions/checkout@v2
 
     - name: Install Crystal
       uses: crystal-lang/install-crystal@v1
@@ -22,21 +22,16 @@ jobs:
     - name: Run tests
       run: crystal spec
 
-    - name: Checkout repo
-      uses: actions/checkout@v2
-
     - name: Run Crystal
       run: |
-        crystal hello-world.cr
+        crystal src/game-of-life.cr
         pwd
         ls -lah
     
     - name: Build crystal
-      uses: actions/checkout@
-      
     - working-directory: ./code
       run: |
-        crystal build hello-world.cr
+        crystal build src/game-of-life.cr
         pwd
         ls -lah
 
@@ -45,42 +40,17 @@ jobs:
     # So I'm migrating to a GitHub artifact and later on - to jFrog Artifactory
     #   run: "scp -rC -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null * ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/gha/github-actions/"
     #   # TODO: Create unique directory on upload (in HH:MM:SS:DD:MM:YYYY format)
-    - name: checkout
-    - uses: actions/checkout@v2
+    # - name: checkout
+    # - uses: actions/checkout@v2
 
-    # - run: mkdir -p path/to/artifact
-    # - run: echo hello > path/to/artifact/world.txt
-    - name: Build the app
-    - run: |
-        crystal build code/hello-world.cr
-        ./code/hello-world
+    # # - run: mkdir -p path/to/artifact
+    # # - run: echo hello > path/to/artifact/world.txt
+    # - name: Build the app
+    # - run: |
+    #     crystal build code/hello-world.cr
+    #     ./code/hello-world
 
-    - uses: actions/upload-artifact@v2
-      with:
-        name: hello-world artifact
-        path: hello-world
-    # TODO - use hashi vault for secret management
-
-
-
-  # security:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@master
-  #     - name: Run Snyk to check for vulnerabilities
-  #       uses: snyk/actions/ruby@master
-  #       continue-on-error: true
-  #       env:
-  #         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-  #       with:
-  #         command: monitor
-
-  # notification:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Slack Notification
-  #     uses: rtCamp/action-slack-notify@v2
-  #     env:
-  #       SLACK_WEBHOOK: ${{ secrets.SSH_SLACK_WEBHOOK }}
-  #       SLACK_CHANNEL: telerik-upskill-devops
-  #       SLACK_USERNAME: shitBot
+    # - uses: actions/upload-artifact@v2
+    #   with:
+    #     name: hello-world artifact
+    #     path: hello-world
