--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -5,8 +5,7 @@ jobs:
   build:
     strategy:
       matrix:
-        # os: [ubuntu-latest, macos-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
