--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -47,8 +47,8 @@ jobs:
     - name: Upload math result for job 2
       uses: actions/upload-artifact@v2
       with:
-        name: homework
-        path: math-homework.txt
+        name: hello_world
+        path: hello_world/out
 
   notifications:
     needs: build
