--- a/.github/workflows/hands-on.yml
+++ b/.github/workflows/hands-on.yml
@@ -64,3 +64,23 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+    - run: ls -a
+    - name: Upload artifact
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: factorial.py
+        path: factorial.py
+  unit-test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check out repository code
+      uses: actions/checkout@v2
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Unit-testing
+      run: |
+        python --version
+        python3 -m doctest factorial.py
