--- a/.github/workflows/hands-on.yml
+++ b/.github/workflows/hands-on.yml
@@ -37,14 +37,22 @@ jobs:
         python lint_test.py
   style:
     needs: pre-build
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        python-version: ['2.7', '3.8', '3.9']
+#         python-version: ['3.9']        
+        exclude:
+          - os: macos-latest
+            python-version: '3.8'
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: ${{ matrix.python }}
     - name: Install dependencies
       run: |
         python --version
