--- a/.github/workflows/hands-on.yml
+++ b/.github/workflows/hands-on.yml
@@ -1,7 +1,10 @@
+
 name: Telerik-Github-Actions-Practice
 env:
   WORKSPACE_ENVIRONMENT_VARIABLE: 'custom workspace environment variable'
-on: [push]
+on:
+  pull_request:
+      types: [opened, synchronize, reopened]
 jobs:
   pre-build:
     env:
@@ -40,7 +43,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ ubuntu-latest ]
         python-version: ['2.7', '3.8', '3.9']
 #         python-version: ['3.9']        
         exclude:
@@ -92,8 +95,31 @@ jobs:
       run: |
         python --version
         python3 -m doctest factorial.py
-  deploy:
-    needs: [ unit-test ]
+  SAST:
+    needs: [ unit-test ]  
     runs-on: ubuntu-latest
     steps:
-    - run: echo "Deploy to production"
+    - uses: actions/checkout@v2
+      with:
+        # Disabling shallow clone is recommended for improving relevancy of reporting
+        fetch-depth: 0
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  database-integration:
+    needs: unit-test
+    runs-on: ubuntu-latest
+    container: node:10.18-jessie
+    services:
+      postgres:
+        image: postgres
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - name: Connect to PostgreSQL
+        run: python --version #validate_db.py
+        env:
+          POSTGRES_HOST: postgres
+          POSTGRES_PORT: 5432
